# bb

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
src/: args.rs  config.rs  lib.rs  main.rs
src/cmd/: mod.rs  pr.rs
