[package]
name = "bb"
version = "0.1.0"
authors = ["t-yng <t.yng.greenmonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
dotenv = "0.15.0"
toml = "0.5.6"
dirs = "2.0.2"
